# back-to-opengl

./: CMakeLists.txt  README.md
App/: CMakeLists.txt
App/include/: GUILayer.h  GameSceneLayer.h
App/include/Scene/: Scene.h
App/include/Scene/Scenes/: CubeScene.h  LightingDemoScene.h  ModelScene.h
App/src/: GUILayer.cpp  GameSceneLayer.cpp  Main.cpp
App/src/Scene/: Scene.cpp
App/src/Scene/Scenes/: CubeScene.cpp  LightingDemoScene.cpp  ModelScene.cpp
Engine/: CMakeLists.txt
Engine/include/: Application.h  CameraController.h  Event.h  EventDispatcher.h  InputEvents.h  Layer.h  Window.h  WindowEvents.h
Engine/include/ECS/: Component.h  Entity.h  EntityManager.h  EntityMemoryPool.h
Engine/include/Events/: Event.h  InputEvents.h  WindowEvents.h
Engine/include/Renderer/: Mesh.h  Model.h  Shader.h  Texture.h  VertexArray.h  VertexBufferLayout.h
Engine/src/: Application.cpp  Camera.cpp  CameraController.cpp  Window.cpp  main.cpp
Engine/src/ECS/: EntityManager.cpp  EntityMemoryPool.cpp
Engine/src/Renderer/: ElementBuffer.cpp  Mesh.cpp  VertexArray.cpp  VertexBuffer.cpp
include/: Application.h  Window.h
include/Core/: EventDispatcher.h
include/Renderer/: ElementBuffer.h  Model.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h
include/Scene/: Camera.h  CameraController.h  CubeScene.h  Scene.h
include/Scene/Scenes/: CubeScene.h  LightingDemoScene.h
include/Utils/: FileUtils.h
include/Window/: Window.h
rc/shaders/: colorFromLightSource.fragment.glsl  colorFromTexture.fragment.glsl  colorFromTextureMix.fragment.glsl  colorFromUniform.fragment.glsl  positionAndColor.vertex.glsl  positionAndNormal.vertex.glsl  positionColorAndTexCoords.vertex.glsl
src/: Application.cpp  Window.cpp  main.cpp
src/Core/: Window.cpp
src/Renderer/: Model.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBufferLayout.cpp
src/Scene/: Camera.cpp  CameraController.cpp  CubeScene.cpp  Scene.cpp
src/Scene/Scenes/: CubeScene.cpp  LightingDemoScene.cpp  ModelScene.cpp
src/Utils/: FileUtils.cpp
src/Window/: Window.cpp
